# anolisa

./: .gitignore  AGENT.md  CONTRIBUTING.md  README.md  README_CN.md
.github/: CODEOWNERS  commitlint.config.json  dependabot.yml  maintainers.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: _rpm-build.yaml  ci.yaml  docker-nightly.yaml  issue-automation.yml  prelint.yml  release-preview.yaml  release.yaml  sec-core-rpmbuild.yaml
docs/: BUILDING.md
scripts/: build-all.sh  rpm-build.sh
src/agent-memory/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  agent-memory.spec.in
src/agent-sec-core/: CHANGELOG.md  Makefile  README.md  README_CN.md  agent-sec-core.spec.in
src/agentsight/: .gitignore  AGENTS.md  Cargo.toml  Makefile  agentsight.json  agentsight.spec.in  build.rs  component.toml
src/anolisa/: CHANGELOG.md  Cargo.toml  rust-toolchain.toml
src/anolisa/crates/anolisa-build/: Cargo.toml
src/anolisa/crates/anolisa-build/src/: backends.rs
src/anolisa/crates/anolisa-build/src/backends/: cargo.rs
src/anolisa/crates/anolisa-core/: Cargo.toml
src/anolisa/crates/anolisa-core/src/: adapter.rs  catalog.rs  central_log.rs  component.rs  contract_lint.rs  daemon_server.rs  disable_execute.rs  distribution.rs  enable_execute.rs  enable_plan.rs  hooks.rs  install_runner.rs  instance.rs  integrity.rs  lib.rs  lifecycle.rs  lock.rs  manifest.rs  metadata.rs  osbase_install.rs  process.rs  register.rs  registry.rs  sandbox_install.rs  sandbox_manifest.rs  self_update.rs  service.rs  state.rs  subscription.rs  system_helper.rs  telemetry.rs  transaction.rs  upload.rs
src/anolisa/crates/anolisa-core/src/adapter/: claim.rs  contract.rs  driver.rs  hermes.rs  manager.rs  openclaw.rs  registry.rs
src/anolisa/crates/anolisa-core/src/health/: engine.rs
src/anolisa/crates/anolisa-core/src/registry/: config.rs
src/anolisa/crates/anolisa-core/src/telemetry/: ops_telemetry.rs
src/anolisa/crates/anolisa-core/tests/: adapter_manager.rs  generic_capability_lifecycle.rs
src/anolisa/crates/anolisa-env/: Cargo.toml
src/anolisa/crates/anolisa-env/src/: cache.rs  gate.rs  lib.rs  probes.rs
src/anolisa/crates/anolisa-env/src/probes/: frameworks.rs
src/copilot-shell/: CHANGELOG.md  package-lock.json  package.json
src/os-skills/: Makefile  README.md  README_CN.md  component.toml  os-skills.spec.in
src/skillfs/: AGENTS.md  CHANGELOG.md  POSIX_FS_REFERENCES.md  POSIX_FS_TEST_MATRIX.csv  README.md  README_zh.md  component.toml  skillfs.spec.in
src/tokenless/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  justfile  tokenless.spec.in
src/ws-ckpt/: .gitignore  CHANGELOG.md  Makefile  README.md  adapter-manifest.json  build-rpm.sh  (+2 more)
src/ws-ckpt/src/crates/cli/: Cargo.toml
src/ws-ckpt/src/crates/cli/src/: main.rs
src/ws-ckpt/src/crates/daemon/: Cargo.toml
src/ws-ckpt/src/crates/daemon/src/: backend_detect.rs  dispatcher.rs  fs_watcher.rs  index_store.rs  lib.rs  listener.rs  lockfile.rs  ops_log.rs  snapshot_mgr.rs  state.rs  workspace_mgr.rs
src/ws-ckpt/src/crates/daemon/src/backends/: btrfs_base.rs  btrfs_common.rs  btrfs_loop.rs  mod.rs
src/ws-ckpt/src/crates/daemon/tests/: protocol_integration.rs
tests/: run-all-tests.sh
(+718 files in other folders)
