[package]
name = "anolisa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anolisa-env.workspace = true
anolisa-platform.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
thiserror.workspace = true
semver.workspace = true
chrono.workspace = true
sha2.workspace = true
base64.workspace = true
ureq.workspace = true
flate2.workspace = true
tar.workspace = true
fs2.workspace = true
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
