[package]
name = "anolisa-env"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
semver.workspace = true
nix.workspace = true
dirs.workspace = true
